favicon and css additions

--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -2,12 +2,18 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1>Hello World</h1>
-        <h4>🚧 New website coming soon 🚧</h4>
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 198.8 464.7"><path fill="#07e" d="M76.3 346.8a87594 87594 0 0 0-53.1-26.5l-19.3-9.5c-3-1.4-4-3.5-3.9-6.7v-70c0-4 1.3-6.4 5-8.2l115.4-58 69.5-35 8-4.2c.2 1.8.5 3 .5 4.2l.1 70c0 3.5-1.2 5.2-4.3 6.8-23.1 11.4-46.1 23-69.1 34.6-.9.4-1.7 1-3 2 3.9 2.1 7.3 4.2 10.9 6.2l61.5 33c3 1.6 4.4 3.7 4.3 7.1l-.4 65.5c0 3.1-.8 5.1-3.8 6.7-55 28.4-110 56.8-164.8 85.3l-27 14c-.7.3-1.6.4-2.7.6v-75c-.1-3.6 1.6-5 4.4-6.3l67.8-34c1.4-.6 2.6-1.8 4-2.8 1.6-.5 3.5-.8 5-1.6 12.1-6 24-12.2 36.2-18 3.3-1.6 4.2-3.5 4.2-7v-65l-.3-8.3-5.2 2.4c-10.8 5.6-21.4 11.5-32.5 16.5-5.8 2.6-7.6 6-7.5 12.2.4 23 .1 46 .1 69ZM.2 180v-73.9c-.1-3.8 1-6 4.5-7.8 53.5-27 106.8-54.1 160.2-81.2 9.5-4.8 18.9-9.9 28.3-14.8l5.2-2.3v8.6c0 22.2 0 44.4.2 66.5 0 3.2-1.2 4.8-3.9 6.2l-67.6 34.2L8.3 175.7l-8 4.3Z"/></svg>
+        </div>
+        <h1 class="hue-shift">Forest Skufca</h1>
+        <h4 class="mb-1">Sr Marketing Operations Manager</h4>
+        <p>Let's Chat: <a href="">forestskufca@gmail.com</a></p>
+        <p>Strategic thinker with a passion for driving growth through data-driven marketing.</p>
       </div>
       <div class="col-12 col-md-6 offset-md-3 text-center">
-        <div class="my-5">
+        <div class="my-2">
           <img class="img-fluid" src="/assets/img/forest-skufca-memphis.jpg">
+          <h5 class="mt-4">New website coming soon..</h5>
         </div>
       </div>
     </div>
