--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -8,5 +8,4 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$brand-red: #FC0000;
-$brand-dark-red: #7F0000;
+$brand-blue: #07e;
