--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,10 +31,10 @@
   <meta property="og:description" content="{{ site.description }}"/>
   <meta property="og:url" content="#">
   <meta property="og:type" content="website"/>
-  <meta property="og:image" content="{{ site.url }}/assets/img/banner/afs-og-banner.png"/>
+  <!-- <meta property="og:image" content="{{ site.url }}/assets/img/banner/afs-og-banner.png"/>
   <meta property="og:image:alt" content="{{ site.description }}"/>
   <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  <meta property="og:image:height" content="630"/> -->
   <link rel="canonical" href="/"/>
 
   <!-- Favicon -->
