--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -140,7 +140,7 @@ ul {
 
     li:before {
       content: "\2022";
-      color: $brand-red; 
+      color: $brand-blue; 
       font-weight: bold;
       display: inline-block;
       width: 1em;
