--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -6,7 +6,7 @@
 @import "base/mixins.scss";
 
 // Custom colors
-$primary: {{ site.data.style.highlight | default: "#FC0000" }} !default;
+$primary: {{ site.data.style.highlight | default: "#07e" }} !default;
 $white: {{ site.data.style.white | default: "#fff" }} !default;
 $black: {{ site.data.style.black | default: "#000" }} !default;
 
