--- a/_sass/layout/_landing.scss
+++ b/_sass/layout/_landing.scss
@@ -40,10 +40,13 @@
     @media (max-width: 450px) {font-size: 3.7rem;}
 
     &.hue-shift {
-      background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+      background-image: -webkit-linear-gradient(358deg, #f35626, #feab3a);
+      background-image: linear-gradient(92deg, #f35626, #feab3a);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      line-height: 1.2;
+      text-fill-color: transparent;
+      -webkit-background-clip: text;
+      text-fill-color: transparent;
+      line-height: 1.25;
     }
   }
 
@@ -58,9 +61,6 @@
     display: inline-block;
     width: 28px;
     height: auto;
-    background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
   }
 }
 
