dark mode js and cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 
       {{ content }}
 
+    <!-- Custom.js -->
+    <script src="assets/js/custom.js"></script>
 	  <!-- Bootstrap core JavaScript -->
 	  <script src="assets/js/jquery.min.js"></script>
 	  <script src="assets/js/bootstrap.bundle.min.js"></script>
