--- a/_sass/layout/_landing.scss
+++ b/_sass/layout/_landing.scss
@@ -1,5 +1,4 @@
 #page-top.landing {
-  color: #ededed;
 
   footer{display: none;}
 
@@ -9,7 +8,6 @@
 }
 
 #landing {
-  background: #111;
   // background: linear-gradient(0deg, rgba(215,121,139,1) 0%, rgba(126,57,124,1) 50%, rgba(61,28,81,1) 100%);
   position: relative;
   min-height: 100vh;
@@ -52,7 +50,8 @@
 
   h4 {
     margin: 0;
-    color: #bbb;
+    opacity: .7;
+    font-weight: 600;
   }
 }
 
