--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -22,13 +22,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        {% for link in site.data.contentful.spaces.advance_fleet.menuGroup %}
+        {% for link in site.data.navigation.nav %}
         <li class="nav-item">
-          <a
-            class="nav-link js-scroll-trigger"
-            href="/{{ link.group_link.slug }}"
-            >{{ link.group_name }}</a
-          >
+          {%- if link.url -%}
+            <a class="nav-link js-scroll-trigger" href="{{ link.url }}">{{ link.title }}</a>
+          {%- elsif link.section -%}
+            <a class="nav-link js-scroll-trigger" href="#{{ link.section }}">{{ link.title }}</a>
+          {%- else -%}
+            <a class="nav-link js-scroll-trigger" href="#">{{ link.title }}</a>
+          {%- endif -%}
         </li>
         {% endfor %}
       </ul>
