dot photo and hero style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,14 +45,17 @@
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Google Fonts: Montserrat : Rubik -->
+  <!-- Google Fonts: Space Grotesk -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="assets/css/all.min.css" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this theme -->
   <!--<link href="assets/css/agency.min.css" rel="stylesheet">-->
   <link href="assets/css/agency.css" rel="stylesheet" />
+  <!-- jQuery -->
+  <script src="assets/js/jquery.min.js"></script>
 
   <!-- Page container change top padding when nav shrinks -->
   {% if page.layout == "page" %}
