--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -8,4 +8,8 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$brand-blue: #07e;
+$brand-blue: #1289FF;
+$black: #171717;
+$snow: #FAFAFA;
+$white: #FFF;
+$gray: #A3A3A3;
