fix dot script https

--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -44,8 +44,7 @@ window.addEventListener('load', function() {
 </script>
 
 <!-- Portriat Dots JS -->
-<script src="http://breathing-halftone.desandro.com/dist/breathing-halftone.pkgd.js"></script>
-<!-- <script src="http://breathing-halftone.desandro.com/dist/breathing-halftone.pkgd.min.js"></script> -->
+<script src="https://breathing-halftone.desandro.com/dist/breathing-halftone.pkgd.js"></script>
 <script>
   var img = document.querySelector('#dots img');
   new BreathingHalftone( img, {
