fix word break and mobile tweaks

--- a/_sass/layout/_landing.scss
+++ b/_sass/layout/_landing.scss
@@ -57,6 +57,10 @@
     max-width: 540px;
     opacity: .27;
     transform: translate(0%, 3.5%);
+
+    @media (max-width: 450px) {
+      width: 65vw;
+    }
   }
 }
 
