--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,6 +9,7 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $brand-blue: #1289FF;
+$scream: #ffc515;
 $black: #171717;
 $snow: #FAFAFA;
 $white: #FFF;
