--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -6,7 +6,7 @@
 @import "base/mixins.scss";
 
 // Custom colors
-$primary: {{ site.data.style.highlight | default: "#1289FF" }} !default;
+$primary: {{ site.data.style.highlight | default: "#ffc515" }} !default;
 $white: {{ site.data.style.white | default: "#FFF" }} !default;
 $black: {{ site.data.style.black | default: "#000" }} !default;
 
