--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center" style="user-select:none;">
       <div class="col-12 col-md-10">
-        <h1 class="hero-title mt-2 py-sm-5">
+        <h1 class="hero-title mt-4 mt-md-2 py-sm-5">
           Forest Skufca
           <span>Sr Marketing Operations Manager</span>
         </h1>
@@ -27,6 +27,101 @@
   </div>
 </section>
 
+<section class="page-section" id="proof">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h4 class="mb-5 marker">You're in good business.</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+      <div class="col-2">
+        <img class="img-fluid" src="https://via.placeholder.com/150x50">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="page-section" id="post">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h4 class="mb-5 marker">Journal</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>Unlocking the Power of Omnichannel Marketing</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>Benefits of Marketing Automation</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>Developing a Successful Marketing Plan</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>Digital Marketing and SEO: Latest Trends</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>The Importance of Social Media in Modern Marketing</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <div class="post-item">
+          <span class="tag">entry</span>
+          <h5>Embrace the Power of Video Marketing</h5>
+          <h6>Read entry</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="page-section" id="footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 py-5 text-center">
+        <span><a href="tel:901.828.3076">901.828.3076</a></span>
+        <span><a href="mailto:forestskufca@gmail.com">forestskufca@gmail.com</a></span>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- url peram -->
 <script>
