footer build out

--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -113,9 +113,12 @@
 </section>
 
 <section class="page-section" id="footer">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-      <div class="col-12 py-5 text-center">
+      <div class="col-12 pt-4 pb-4 d-flex align-items-center flex-column flex-sm-row">
+        <span class="icon mr-sm-auto ml-0 mb-2 mb-sm-0"> 
+          {% include sf-icon.html %}
+        </span>
         <span><a href="tel:901.828.3076">901.828.3076</a></span>
         <span><a href="mailto:forestskufca@gmail.com">forestskufca@gmail.com</a></span>
       </div>
