--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
   <link rel="icon" type="image/png" href="/assets/img/icons/icon-16.png" sizes="16x16" />
 
   <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Google Fonts: Space Grotesk -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,10 +52,10 @@
   <!-- <link href="assets/css/all.min.css" rel="stylesheet" type="text/css"> -->
 
   <!-- Custom styles for this theme -->
-  <!--<link href="assets/css/agency.min.css" rel="stylesheet">-->
-  <link href="assets/css/agency.css" rel="stylesheet" />
+  <!--<link href="/assets/css/agency.min.css" rel="stylesheet">-->
+  <link href="/assets/css/agency.css" rel="stylesheet" />
   <!-- jQuery -->
-  <script src="assets/js/jquery.min.js"></script>
+  <script src="/assets/js/jquery.min.js"></script>
 
   <!-- Page container change top padding when nav shrinks -->
   {% if page.layout == "page" %}
