--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -90,7 +90,18 @@
       </div>
     </div>
     <div class="row">
+      {% for post in site.posts %}
       <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
+        <a href="{{ post.url }}">
+          <div class="post-item">
+            <span class="tag">{{ post.tag }}</span>
+            <h5>{{ post.title }}</h5>
+            <h6>Read {{ post.tag }}</h6>
+          </div>
+        </a>
+      </div>
+      {% endfor %}
+      <!-- <div class="col-12 col-sm-6 col-lg-4 pr-md-3 mb-3 mb-md-4">
         <div class="post-item">
           <span class="tag">entry</span>
           <h5>Unlocking the Power of Omnichannel Marketing</h5>
@@ -132,24 +143,18 @@
           <h5>Embrace the Power of Video Marketing</h5>
           <h6>Read entry</h6>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
 
-<section class="page-section" id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 pt-4 pb-4 d-flex align-items-center flex-column flex-sm-row">
-        <span class="icon mr-sm-auto ml-0 mb-2 mb-sm-0"> 
-          {% include sf-icon.html %}
-        </span>
-        <span><a href="tel:901.828.3076">901.828.3076</a></span>
-        <span><a href="mailto:forestskufca@gmail.com">forestskufca@gmail.com</a></span>
-      </div>
-    </div>
-  </div>
-</section>
+<!-- <ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul> -->
 
 <!-- url peram -->
 <script>
