--- a/_sass/layout/_landing.scss
+++ b/_sass/layout/_landing.scss
@@ -135,6 +135,27 @@
 
 #post-template {
   padding-top: 50px;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {margin: 2.2em 0 1em;}
+
+  h1 {margin-top: 0; font-weight: 300;}
+  h2 {}
+  h3 {}
+  h4 {}
+  p { 
+    font-size: 16.3px;
+    @media (max-width: 768px) {font-size: 15.6px;}
+    @media (max-width: 450px) {font-size: 14.8px;}
+  }
+  li {
+    list-style:square;
+    &::marker {color: $primary;}
+  }
 }
 
 #footer {
