sticky nav drop

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,20 @@
 ---
 layout: default
 ---
-
+<div id="sticky">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-md-8 offset-md-2 px-md-2">
+				<div class="link-back"><a href="/#post">&larr; &nbsp;back to all post</a></div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
 <section id="post-template">	
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-8 offset-md-2 px-md-2">
-				<div class="mb-5"><a href="/#post">&larr; &nbsp;back to all post</a></div>
 				{{ content }}
 			</div>
 		</div>
