--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -216,3 +216,39 @@ img.invert {
 .google-map {
   filter: invert(1) contrast(.846) hue-rotate(100deg) grayscale(.8);
 }
+
+#sticky {
+  padding: 30px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+body.scrolled #sticky {
+  position: fixed;
+  transform: translateY(-100%);
+  padding: 10px 0;
+  background: rgba(#072B31, .6);
+  -webkit-backdrop-filter: saturate(70%) blur(15px);
+  backdrop-filter: saturate(70%) blur(15px);
+  animation: unTuck .33s ease-out forwards .3s;
+
+  .link-back {
+    @media (max-width: 768px) {font-size: 13.8px;}
+    @media (max-width: 450px) {font-size: 13px;}
+  }
+}
+
+@-webkit-keyframes unTuck {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+
+
