client logo tweak

--- a/_includes/landing-hero.html
+++ b/_includes/landing-hero.html
@@ -40,16 +40,16 @@
         <img class="img-fluid invert" src="/assets/img/clients/taming-the-wild.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
-        <img class="img-fluid invert" src="/assets/img/clients/brooks.png">
-      </div>
+        <img class="img-fluid invert sm" src="/assets/img/clients/brooks.png">
+      </div> 
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
         <img class="img-fluid invert" src="/assets/img/clients/dobbs.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
-        <img class="img-fluid invert sm" src="/assets/img/clients/wiseacre-brewing.png">
+        <img class="img-fluid invert xs" src="/assets/img/clients/wiseacre-brewing.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
-        <img class="img-fluid invert" src="/assets/img/clients/ncrm-logo.png">
+        <img class="img-fluid invert md" src="/assets/img/clients/ncrm-logo.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
         <img class="img-fluid invert lg" src="/assets/img/clients/highpoint-church.png"> 
@@ -58,7 +58,7 @@
         <img class="img-fluid invert" src="/assets/img/clients/amro-logo.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
-        <img class="img-fluid invert sm" src="/assets/img/clients/hpp-icon.png">
+        <img class="img-fluid invert xs" src="/assets/img/clients/hpp-icon.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
         <img class="img-fluid invert lg" src="/assets/img/clients/graceland.png">
@@ -70,7 +70,7 @@
         <img class="img-fluid invert" src="/assets/img/clients/mosh-icon.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
-        <img class="img-fluid invert sm" style="filter: grayscale(1) contrast(30);" src="/assets/img/clients/my-cup-of-tea.png">
+        <img class="img-fluid invert sm" src="/assets/img/clients/my-cup-of-tea.png">
       </div>
       <div class="col-4 col-sm-3 col-lg-2 pr-lg-0 mb-2 mb-md-3">
         <img class="img-fluid invert lg" src="/assets/img/clients/pro-stone.png">
